# Airceiver

./: CMakeLists.txt  debug.h  main.cpp  mainwindow.cpp  mainwindow.h  qtutils.cpp  qtutils.h  server.cpp  server.h
cmake/: FindQtZeroConf.cmake
